--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,intellij,visualstudiocode
+
+# Ignore Gradle build output directory
+build
