--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-
+spring:
+  datasource:
+    url: jdbc:mariadb://session-db-server:3306/SESSION-DB
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: admin
+    password: passwd
+  session:
+    timeout: 600
+    store-type: jdbc
+    jdbc:
+      initialize-schema: never
+      table-name: SPRING_SESSION
+  jpa:
+    open-in-view: false
+    generate-ddl: true
