--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -40,6 +40,11 @@ dependencies {
 	implementation 'com.sun.xml.bind:jaxb-core:4.0.1'
 	
 	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+
+	// implementation 'org.springframework.session:spring-session-core'
+	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.session:spring-session-jdbc'
+	implementation 'org.mariadb.jdbc:mariadb-java-client' // MariaDB
 }
 
 tasks.named('test') {
