--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -41,12 +41,11 @@ dependencies {
 	
 	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
 
-	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.session:spring-session-core'
 	implementation 'org.springframework.session:spring-session-jdbc'
-	implementation 'org.mariadb.jdbc:mariadb-java-client' // MariaDB
 }
 
 tasks.named('test') {
-	useJUnitPlatform()
+	// useJUnitPlatform()
 }
