--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,16 +7,37 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-    - run: apt-get update
-    - run: apt-get install jq -y;
-    - run: touch ./auth-service/src/main/resources/application.properties
-    - run: echo "${{secrets.APPLICATION_YML}}" > ./auth-service/src/main/resources/application.properties
-    - run: ./docker_push.sh
+      - uses: actions/checkout@v3
+      
+      -
+        name: set env
+        run: |
+          touch ./auth-service/src/main/resources/application.properties
+          echo "${{secrets.APPLICATION_YML}}" > ./auth-service/src/main/resources/application.properties
+        
+      -
+        name: set tag
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: jusuk/auth-server
+          tag-semver: latest
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64
+          push: true
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
