--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,12 +34,16 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64
-          push: true
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+        name: Docker Build
+        run: docker build . --file Dockerfile --tag ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPONAME}}:latest
+      -
+        name: Docker push
+        run: docker push ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPONAME}}:latest
+        # uses: docker/build-push-action@v2
+        # with:
+        #   context: .
+        #   file: ./Dockerfile
+        #   platforms: linux/amd64
+        #   push: true
+        #   tags: ${{ steps.docker_meta.outputs.tags }}
+        #   labels: ${{ steps.docker_meta.outputs.labels }}
