--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.session:spring-session-core'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 	implementation 'org.springframework.session:spring-session-jdbc'
 }
 
